hide body overflow-x to prevent scrollbar on smaller devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,7 @@ body {
   width: 100%;
 
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 /* Next Container */
